scrollbar-fix-contactlist

--- a/src/app/features/contacts/contact-layout/contact-layout.component.scss
+++ b/src/app/features/contacts/contact-layout/contact-layout.component.scss
@@ -175,7 +175,6 @@ h3 {
 }
 
 app-contact-list {
-  overflow-y: auto;
   flex-grow: 1;
   min-width: 400px;
 }
